2009-08-30  Tatsuro Matsuoka <tmacchant3@yahoo.co.jp>

	* config/makeile.mgw:  The cairo terminals need gp_cairo_helpers also.

2009-08-28  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* config/makefile.mgw:  Separate configuration flag CAIROTERMS for
	inclusion of pngcairo and pdfcairo terminals. 
	EAM - Share a CAIROLIBS flag for use by both WXT and CAIROTERMS.

2009-08-28  jpsa <john-aldridge@users.sourceforge.net>

	* src/win/wgraph.c:   Use printer open method recommended by 
	Microsoft knowledge base article 240082.

2009-08-28  Alexander Täschner <taschna@users.sourceforge.net>

	* src/win/winmain.c:  Avoid buffer overflow in MyPrintF and MyFPrintF.

2009-08-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphcs.c (boundary):  Fix bug #2845874
	(Rotated xtics caused misplacement of explicit bmargin).

2009-08-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/breaders.c (png_filetype_function df_libgd_get_pixel)
	src/breaders.h src/datafile.c (df_open df_readbinary):
	If gnuplot has been linked with libgd (to support gif/png/jpeg) then
	we might as well use its ability to read in png images as binary data.
	New binary option for use with either rgbimage or rgbalpha
		plot 'foo.png' binary filetype=png

	* src/datafile.c (plot_option_binary):  Fix the logic that checks for a
	default binary filetype if none is specified in the plot command.

	* docs/gnuplot.doc docs/plotstyles.gnu docs/bldg.png:
	Add a sample plot the uses rescaled png images as plot elements.

2009-08-26  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/canvas.trm: Remove EXPERIMENTAL flag from
	canvas and wxt terminals.

	* term/post.trm: Fix typos in version history

2009-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): The binary data syntax
	splot ... binary array=(x,y) 
	is very odd because it always fills in the z coordinate of each
	voxel with 0 rather than with the actual array value.  This makes a