@@ -1,3 +1,8 @@
+2009-08-31  Benjamin Lindner  <lindnerb@users.sourceforge.net> 
+
+	* src/win/wpause.c src/wxterminal/gp_cairo.c:  Fix ambiguous syntax and
+	bad format statement that generates compiler warnings.
+
 2009-08-30  Tatsuro Matsuoka <tmacchant3@yahoo.co.jp>
 
 	* config/makeile.mgw:  The cairo terminals need gp_cairo_helpers also.
